<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".activity_terceira_tela"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qual_o_valor_da_transferencia"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="32dp"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="353dp"
        android:layout_height="24dp"
        android:text="@string/saldo_disponivel_em_conta_r_69_000_00"
        android:textSize="19sp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="353dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:hint="@string/r_0_00"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextFields" />


    <ImageButton
        android:id="@+id/valor"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="#E0E0E0"
        android:importantForAccessibility="no"
        android:src="@mipmap/flecha_direita"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="480dp"
        android:layout_marginStart="280dp"
        android:background="@drawable/redondobutton"
      />
    </LinearLayout>



